# daccord-editor

./: .gitignore  CLAUDE.md  README.md  build.sh  project.godot
addons/godot_sandbox/: downloader.gd.uid  gdscript.elf.uid  plugin.gd.uid
games/battleships/: build.sh  plugin.json
games/battleships/src/: constants.lua  drawing.lua  events.lua  input.lua  main.lua  state.lua
games/codenames/: .gitignore  CLAUDE.md  README.md  build.sh  plugin.json  project.godot
games/codenames/src/: constants.lua  drawing.lua  events.lua  input.lua  main.gd  main.lua  state.lua
games/codenames/tools/: CMakeLists.txt  gdsc.cpp
scenes/: editor.tscn
scenes/plugins/: plugin_canvas.gd  plugin_canvas.gd.uid  scripted_runtime.gd  scripted_runtime.gd.uid
scripts/: editor.gd  editor.gd.uid
